test/oscar/compiler/errors/noMainFunc.oscar
message testNow()


actor Tester() {
  
  receive = {
    | testNow() => {
        Println("Error1");
	}
  }
}
